<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_walk">

        <EditTextPreference
            app:defaultValue="4.7"
            app:icon="@drawable/ic_flower"
            app:key="speed_kmh"
            app:title="@string/pref_speed_title" />

        <EditTextPreference
            app:defaultValue="10"
            app:key="speed_jitter_pct"
            app:title="@string/pref_jitter_title" />

        <EditTextPreference
            app:defaultValue="70"
            app:key="stride_cm"
            app:title="@string/pref_stride_title" />

        <ListPreference
            app:defaultValue="LOOP"
            app:entries="@array/loop_mode_entries"
            app:entryValues="@array/loop_mode_values"
            app:icon="@drawable/ic_flag"
            app:key="loop_mode"
            app:title="@string/pref_loop_mode_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="30"
            app:key="default_radius_m"
            app:title="@string/pref_default_radius_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="orbit_at_waypoints"
            app:summary="@string/pref_orbit_summary"
            app:title="@string/pref_orbit_title" />

        <EditTextPreference
            app:defaultValue="120"
            app:dependency="orbit_at_waypoints"
            app:key="default_dwell_sec"
            app:title="@string/pref_default_dwell_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_spiral">
        <EditTextPreference
            app:defaultValue="40"
            app:key="spiral_line_width_m"
            app:dialogMessage="@string/pref_spiral_width_help"
            app:positiveButtonText="@string/action_ok"
            app:negativeButtonText="@string/action_cancel"
            app:title="@string/pref_spiral_width_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_steps">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="inject_steps"
            app:summary="@string/pref_inject_steps_summary"
            app:title="@string/pref_inject_steps_title" />

        <EditTextPreference
            app:defaultValue="60"
            app:dependency="inject_steps"
            app:key="step_flush_sec"
            app:title="@string/pref_step_flush_title" />

        <EditTextPreference
            app:defaultValue="50000"
            app:dependency="inject_steps"
            app:key="daily_step_cap"
            app:title="@string/pref_daily_cap_title" />

        <Preference
            app:icon="@drawable/ic_delete"
            app:key="delete_today_steps"
            app:persistent="false"
            app:summary="@string/pref_delete_today_summary"
            app:title="@string/pref_delete_today_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_location">

        <EditTextPreference
            app:defaultValue="3"
            app:key="accuracy_min_m"
            app:title="@string/pref_acc_min_title" />

        <EditTextPreference
            app:defaultValue="9"
            app:key="accuracy_max_m"
            app:title="@string/pref_acc_max_title" />

        <EditTextPreference
            app:defaultValue="20"
            app:key="altitude_m"
            app:title="@string/pref_altitude_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="mock_network"
            app:title="@string/pref_mock_network_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="mock_fused"
            app:title="@string/pref_mock_fused_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="flp_mock_mode"
            app:title="@string/pref_flp_mock_title" />

        <ListPreference
            app:defaultValue="WALK"
            app:entries="@array/return_mode_entries"
            app:entryValues="@array/return_mode_values"
            app:icon="@drawable/ic_home"
            app:key="return_mode"
            app:title="@string/pref_return_mode_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="notify_on_arrival"
            app:title="@string/pref_notify_arrival_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_overlay">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_flower"
            app:key="overlay_enabled"
            app:summary="@string/pref_overlay_summary"
            app:title="@string/pref_overlay_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_cat_about">

        <Preference
            app:key="app_version"
            app:persistent="false"
            app:selectable="false"
            app:title="@string/pref_version_title" />

        <Preference
            app:icon="@drawable/ic_warning"
            app:key="disclaimer"
            app:persistent="false"
            app:title="@string/pref_disclaimer_title" />
    </PreferenceCategory>

</PreferenceScreen>
